labs/examples/design-patterns-examples/src/com/examples/design/solid/o/good/Rectangle.java
package com.examples.design.solid.o.good;

public class Rectangle extends Shape  {
    public void draw() {
        // draw the rectangle
    }
}
