labs/examples/design-patterns-examples/src/com/examples/design/solid/o/bad/Circle.java
package com.examples.design.solid.o.bad;

public class Circle extends Shape {
    Circle() {
        super.m_type=2;
    }
}